<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and limitations under the License.
-->


<!--
    A DrawerLayout is indended to be used as the top-level content view using match_parent for both width and height to consume the full space available.
-->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!--
         As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions.
    -->
    <!--
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:scrollbarStyle="outsideOverlay">
        <TextView android:id="@+id/content_text"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:text="@string/drawer_layout_summary"
                  android:textAppearance="?android:attr/textAppearanceMedium"/>
    </ScrollView>
    -->
    <!-- The PullToRefreshExpandableListView replaces a standard ExpandableListView widget. -->
    <!--
    Have to change into a normal ExpandableListView
    <com.handmark.pulltorefresh.library.PullToRefreshExpandableListView
        xmlns:ptr="http://schemas.android.com/apk/res-auto"
        android:id="@+id/pull_refresh_expandable_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        ptr:ptrHeaderBackground="@android:color/darker_gray"
        ptr:ptrHeaderTextColor="@android:color/white"
        ptr:ptrMode="both" />
    -->
<FrameLayout
            android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <ExpandableListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
       />
    <TextView 
        android:id="@android:id/empty"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
        android:layout_gravity="center"
        android:gravity="center"
        
        android:text="No item loaded.\n Please Swipe from Left to Watch more Trials."
        ></TextView>
</FrameLayout>
    

    <!--
         android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the starting side, which is
         left for left-to-right locales. The drawer is given a fixed
         width in dp and extends the full height of the container. A
         solid background is used for contrast with the content view.
    -->

    <LinearLayout
        android:id="@+id/start_drawer_layout"
        android:layout_width="360dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#FFE6E6E6"
        android:orientation="vertical" >
          <Button
            android:id="@+id/button_addfeed1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/add"
            android:text="@string/button_addfeed" >
        </Button>
    
        <Button
            android:id="@+id/button_showstar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/star_on"
            android:text="@string/button_showstar" >
        </Button>



        <Button
            android:id="@+id/button_showallitem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/showallitems"
            android:text="@string/button_showallitem" >
        </Button>
		<!-- 
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </EditText>
         -->

        <ListView
            android:id="@+id/start_drawer"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>